force-app/main/default/objects/PostChannel2Queue__mdt/PostChannel2Queue__mdt.object-meta.xml
<CustomObject>
    <label>Post Channel to Queue</label>
    <pluralLabel>Post Channel to Queue</pluralLabel>
</CustomObject>