force-app/main/default/objects/PostChannel2Queue__mdt/fields/Social_ID__c.field-meta.xml
<CustomField>
    <fullName>Social_ID__c</fullName>
    <label>Social ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>