force-app/main/default/objects/PostChannel2Queue__mdt/fields/Topic_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Topic_Profile_Name__c</fullName>
    <label>Topic Profile Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>