force-app/main/default/objects/PostChannel2Queue__mdt/fields/Warroom_Channel__c.field-meta.xml
<CustomField>
    <fullName>Warroom_Channel__c</fullName>
    <label>Warroom Channel</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>